fix(ViewerWidget): Sane z-index as to not cover vuetify mobile

--- a/types/oscillator/src/widgets/ViewerWidget/style.css
+++ b/types/oscillator/src/widgets/ViewerWidget/style.css
@@ -42,7 +42,7 @@
   left: 5px;
   right: 5px;
   height: 30px;
-  z-index: 20;
+  z-index: 1;
   display: flex;
   flex-direction: row;
   align-items: center;
